force-app/main/default/objects/Case/fields/Date_Time_Udpated__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Udpated__c</fullName>
    <label>Date/Time Udpated</label>
    <type>DateTime</type>
</CustomField>