force-app/main/default/objects/Case/fields/Jira_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Jira_Assignee__c</fullName>
    <label>Jira Assignee</label>
    <length>250</length>
    <type>Text</type>
</CustomField>