force-app/main/default/objects/Case/fields/Jira_Creator__c.field-meta.xml
<CustomField>
    <fullName>Jira_Creator__c</fullName>
    <label>Jira Creator</label>
    <length>250</length>
    <type>Text</type>
</CustomField>