force-app/main/default/objects/Case/fields/JIRA_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>JIRA_on_behalf_of__c</fullName>
    <label>JIRA on behalf of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>