force-app/main/default/objects/Case/fields/JIRA_Reporter__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Reporter__c</fullName>
    <description>Used for JIRA</description>
    <label>JIRA Reporter</label>
    <type>TextArea</type>
</CustomField>