force-app/main/default/objects/Case/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <formula>IF( NOT(ISBLANK( ContactId ) ) ,  Contact.Email ,  IF( NOT( ISBLANK( Lead__c ) ) ,  Lead__r.Email ,&apos;&apos; ) )</formula>
    <label>User Email</label>
    <type>Text</type>
</CustomField>