force-app/main/default/objects/Case/recordTypes/Travel_Fund_Reimbursement_Request.recordType-meta.xml
<RecordType>
    <fullName>Travel_Fund_Reimbursement_Request</fullName>
    <active>true</active>
    <businessProcess>Travel Fund Request</businessProcess>
    <description>This request process is used by event attendees to request travel fund reimbursements</description>
    <label>Travel Fund Reimbursement Request</label>
</RecordType>