force-app/main/default/objects/Case/recordTypes/Visa_Request.recordType-meta.xml
<RecordType>
    <fullName>Visa_Request</fullName>
    <active>true</active>
    <businessProcess>Visa Request</businessProcess>
    <description>This request process is used by event attendees to request a travel visa</description>
    <label>Visa Request</label>
</RecordType>