force-app/main/default/objects/Case/listViews/Closed_cases.listView-meta.xml
<ListView>
    <fullName>Closed_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Date_Time_Udpated__c</columns>
    <columns>Jira_Assignee__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>Component__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed cases</label>
</ListView>